src/test/ui/consts/const-size_of-cycle.stderr
error[E0391]: cycle detected when simplifying constant for the type system `Foo::bytes::{constant#0}`
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires simplifying constant for the type system `Foo::bytes::{constant#0}`...
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `Foo::bytes::{constant#0}`...
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing layout of `Foo`...
   = note: ...which requires normalizing `[u8; _]`...
   = note: ...which again requires simplifying constant for the type system `Foo::bytes::{constant#0}`, completing the cycle
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/const-size_of-cycle.rs:3:1
   |
LL | struct Foo {
   | ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
